# TakeoffAI

./: .env.template  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TakeoffAI — User Guide for Construction Companies.gdoc  docker-compose.run.yml  docker-compose.yml  nginx.conf  pyproject.toml  start.sh  stop.sh
backend/: config.py  scheduler.py
backend/agents/: _db.py  _wiki_entities.py  _wiki_io.py  _wiki_jobs.py  _wiki_lint.py  _wiki_llm.py  _workspace.py  bid_to_win.py  feedback_loop.py  harness_evolver.py  historical_retrieval.py  judge.py  pre_bid_calc.py  price_verifier.py  tournament.py  utils.py  wiki_manager.py
backend/api/: main.py  routes.py  upload.py  validators.py  verification.py  wiki_routes.py
backend/data/: bid_upload_template.csv  material_costs.csv
docs/: ARCHITECTURE.md  build_tournament_guide.py  takeoffai-tradeshow-design-philosophy.md  tournament_guide.md
frontend/: Dockerfile
installer/: install.sh
tests/: conftest.py  test_agentic_trace_proposer.py  test_bid_to_win.py  test_db_schema.py  test_feedback_loop_calibration.py  test_harness_evolver.py  test_health_endpoints.py  test_historical_retrieval.py  test_judge_hook.py  test_price_verifier.py  test_routes.py  test_security.py  test_tournament.py  test_upload.py  test_utils.py  test_verification_api.py  test_wiki_manager.py  test_wiki_routes.py
wiki/: DASHBOARD.md  SCHEMA.md
wiki/clients/: smoketest.md
wiki/jobs/: 2026-04-11-smoketest-kitchen-remodel-120-sqft-replace-cabinets-and-countertops.md
wiki/personalities/: aggressive.md  (+4 more)
(+26 files in other folders)
